# NeuronMatch

./: .cproject  .gitignore  .project  CMakeLists.txt  Makefile  NeuronMatch  NeuronMatch.pro  README  moc_mainwindow.cpp  ui_mainwindow.h
Code/: CMakeLists.txt  dataio.cpp  dataio.h  desc.cpp  desc.h  knnsearch.cpp  loadneuron.cpp  nclassify.cpp  neuron.cpp  neuron.h
Code/GUI/NeuronDemo/: NeuronDemo.pro  OgreMatrix3.cpp  OgreMatrix4.cpp  OgreQuaternion.cpp  OgreVector2.cpp  OgreVector3.cpp  OgreVector4.cpp  dataio.cpp  del_functor.hpp  desc.cpp  desc.h  descriptorwidget.cpp  descriptorwidget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  matrix.hpp  matrixmath.cpp  matrixmath.h  neuron.cpp  neuron.h  neuronmanager.cpp  neuronmanager.h  neuronwidget.cpp  neuronwidget.h  quicksort.hpp
Code/IO/: MatFile.cpp  MatFile.h
Code/Include/: dataio.h  del_functor.hpp  desc.h  knnsearch.h  matrix.hpp  matrixmath.h  myexception.hpp  neuron.h
Code/Include/OgreMath/: OgreCommon.h  OgreMatrix4.h  OgreVector3.h
Code/Math/: OgreMatrix3.h  OgreVector3.h  matrix.hpp  matrixmath.h
Code/NeuronModel/: neuron.cpp  neuron.h
Code/OgreMath/: .directory  CMakeLists.txt  OgreVector3.h
Code/Test/: CMakeLists.txt  createdesc.cpp  loadneuron.cpp  testmatrix.cpp  testmm.cpp
Code/Tools/: CMakeLists.txt  Format.cxx~  a.out  fmtswc.cpp
Code/Utilities/: fmtswc.cpp  mathematics.cpp  mathematics.h
Data/NeuroMorpho.Org/Granule_cell/: n02-cont01-sl4.CNG.swc  n05-cont02-sl1.CNG.swc  n07-cont03-sl2.CNG.swc  n09-cont02-sl2.CNG.swc  n13-cont08-sl4.CNG.swc  n21-r06-04-sl2.CNG.swc  n220.CNG.swc  n225.CNG.swc  n23-r06-04-sl4.CNG.swc  n242.CNG.swc  n244.CNG.swc  n27-r01-02-sl4.CNG.swc  n271.CNG.swc  n274.CNG.swc  n275.CNG.swc  n31-r05-01-sl1.CNG.swc  n34-r05-03-sl1.CNG.swc  n35-r05-03-sl1.CNG.swc  n37-r06-09-sl4.CNG.swc  n38-r06-09-sl4.CNG.swc  n40-r01-02-sl4.CNG.swc  n500.CNG.swc  n502.CNG.swc  n503.CNG.swc  n506.CNG.swc  n509.CNG.swc  n510.CNG.swc  n514.CNG.swc  n515.CNG.swc
Data/NeuroMorpho.Org/Other/: 060404a_zd.CNG.swc  060804a_zd.CNG.swc  061004c_zd.CNG.swc  081103a.CNG.swc  082203a.CNG.swc  092303a.CNG.swc  092903a.CNG.swc  10-LM-HiDe.CNG.swc  101903b.CNG.swc  104-SR-HiDe.CNG.swc  32-SR-HiDe.CNG.swc  34-SR-HiDe.CNG.swc  69-SR-LoDe.CNG.swc  85-LM-HiDe.CNG.swc  950828b.CNG.swc  950916e2.CNG.swc  950923b.CNG.swc  9510052.CNG.swc  951220a.CNG.swc  960125a.CNG.swc  960210a.CNG.swc  960210b.CNG.swc  960217c.CNG.swc  960217d.CNG.swc  960217e.CNG.swc  (+30 more)
Data/Test/: 960401c.CNG.swc
Doc/: Proposal.tex
NeuronModel/: neuron.cpp  neuron.h
OgreMath/: OgreCommon.h  OgreMatrix4.cpp  OgreVector3.cpp
(+212 files in other folders)
